[gd_scene load_steps=13 format=2]

[ext_resource path="res://Levels/ALevel.gd" type="Script" id=1]
[ext_resource path="res://GameObjects/Background/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameObjects/Background/PingSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/DingDur.wav" type="AudioStream" id=4]
[ext_resource path="res://GameObjects/Environment/AbstractCheckpoint.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameObjects/Environment/SmallWall.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameObjects/Environment/HugeWall.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameObjects/Environment/BigWall.tscn" type="PackedScene" id=8]
[ext_resource path="res://GameObjects/Environment/NormalWall.tscn" type="PackedScene" id=9]
[ext_resource path="res://GameObjects/Enemies/Dummy.tscn" type="PackedScene" id=10]
[ext_resource path="res://GameObjects/Environment/AbstractButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=12]

[node name="ALevel" type="Node2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="PingSpawner" parent="Background" instance=ExtResource( 3 )]
position = Vector2( 8800, 0 )
thx_sound_stream = ExtResource( 4 )

[node name="LearnToJump" type="Node2D" parent="."]

[node name="AbstractCheckpoint" parent="LearnToJump" instance=ExtResource( 5 )]

[node name="AbstractCheckpoint2" parent="LearnToJump" instance=ExtResource( 5 )]
position = Vector2( -440, 0 )

[node name="SmallWall" parent="LearnToJump" instance=ExtResource( 6 )]
position = Vector2( 1400, 0 )

[node name="SmallWall2" parent="LearnToJump" instance=ExtResource( 6 )]
position = Vector2( 1450, 0 )

[node name="HugeWall" parent="LearnToJump" instance=ExtResource( 7 )]
position = Vector2( -2300, 0 )

[node name="BigWall" parent="LearnToJump" instance=ExtResource( 8 )]
position = Vector2( 700, 0 )

[node name="SmallWall3" parent="LearnToJump" instance=ExtResource( 6 )]
position = Vector2( 1950, 0 )

[node name="BigWall2" parent="LearnToJump" instance=ExtResource( 8 )]
position = Vector2( 2100, 0 )

[node name="BigWall3" parent="LearnToJump" instance=ExtResource( 8 )]
position = Vector2( 2800, 0 )

[node name="BigWall4" parent="LearnToJump" instance=ExtResource( 8 )]
position = Vector2( 3100, 0 )

[node name="NormalWall" parent="LearnToJump" instance=ExtResource( 9 )]
position = Vector2( 3400, 0 )

[node name="BigWall5" parent="LearnToJump" instance=ExtResource( 8 )]
position = Vector2( 3500, 0 )

[node name="SmallWall4" parent="LearnToJump" instance=ExtResource( 6 )]
position = Vector2( 4070, 0 )

[node name="SmallWall5" parent="LearnToJump" instance=ExtResource( 6 )]
position = Vector2( 4100, 0 )

[node name="SmallWall6" parent="LearnToJump" instance=ExtResource( 6 )]
position = Vector2( 4130, 0 )

[node name="SmallWall7" parent="LearnToJump" instance=ExtResource( 6 )]
position = Vector2( 4160, 0 )

[node name="SmallWall8" parent="LearnToJump" instance=ExtResource( 6 )]
position = Vector2( 4250, 0 )

[node name="AbstractCheckpoint3" parent="LearnToJump" instance=ExtResource( 5 )]
position = Vector2( 4750, 0 )

[node name="BigWall6" parent="LearnToJump" instance=ExtResource( 8 )]
position = Vector2( 5300, 0 )

[node name="SmallWall9" parent="LearnToJump" instance=ExtResource( 6 )]
position = Vector2( 5550, 0 )

[node name="BigWall7" parent="LearnToJump" instance=ExtResource( 8 )]
position = Vector2( 5620, 0 )

[node name="BigWall8" parent="LearnToJump" instance=ExtResource( 8 )]
position = Vector2( 5689.19, 0 )

[node name="NormalWall2" parent="LearnToJump" instance=ExtResource( 9 )]
position = Vector2( 6000, 0 )

[node name="NormalWall3" parent="LearnToJump" instance=ExtResource( 9 )]
position = Vector2( 6090, 0 )

[node name="NormalWall4" parent="LearnToJump" instance=ExtResource( 9 )]
position = Vector2( 6180, 0 )

[node name="NormalWall5" parent="LearnToJump" instance=ExtResource( 9 )]
position = Vector2( 6270, 0 )

[node name="NormalWall6" parent="LearnToJump" instance=ExtResource( 9 )]
position = Vector2( 6360, 0 )

[node name="NormalWall7" parent="LearnToJump" instance=ExtResource( 9 )]
position = Vector2( 6450, 0 )

[node name="NormalWall8" parent="LearnToJump" instance=ExtResource( 9 )]
position = Vector2( 6540, 0 )

[node name="NormalWall9" parent="LearnToJump" instance=ExtResource( 9 )]
position = Vector2( 6630, 0 )

[node name="NormalWall10" parent="LearnToJump" instance=ExtResource( 9 )]
position = Vector2( 6720, 0 )

[node name="NormalWall11" parent="LearnToJump" instance=ExtResource( 9 )]
position = Vector2( 6810, 0 )

[node name="LearnDisappear" type="Node2D" parent="."]
position = Vector2( 8000, 0 )

[node name="AbstractCheckpoint" parent="LearnDisappear" instance=ExtResource( 5 )]
position = Vector2( -600, 0 )

[node name="HugeWall2" parent="LearnDisappear" instance=ExtResource( 7 )]

[node name="Timer" type="Timer" parent="LearnDisappear/HugeWall2"]
wait_time = 1.5
autostart = true

[node name="BigWall" parent="LearnDisappear" instance=ExtResource( 8 )]
position = Vector2( 1000, 0 )

[node name="Timer" type="Timer" parent="LearnDisappear/BigWall"]
wait_time = 0.5
autostart = true

[node name="BigWall2" parent="LearnDisappear" instance=ExtResource( 8 )]
position = Vector2( 1200, 0 )

[node name="BigWall3" parent="LearnDisappear" instance=ExtResource( 8 )]
position = Vector2( 1800, 0 )

[node name="BigWall4" parent="LearnDisappear" instance=ExtResource( 8 )]
position = Vector2( 2000, 0 )

[node name="Timer" type="Timer" parent="LearnDisappear/BigWall4"]
wait_time = 1.5
autostart = true

[node name="BigWall5" parent="LearnDisappear" instance=ExtResource( 8 )]
position = Vector2( 2200, 0 )

[node name="NormalWall" parent="LearnDisappear" instance=ExtResource( 9 )]
position = Vector2( 2460, 0 )

[node name="LearnButton" type="Node2D" parent="."]
position = Vector2( 11600, 0 )

[node name="AbstractCheckpoint" parent="LearnButton" instance=ExtResource( 5 )]
position = Vector2( -500, 0 )

[node name="Dummy" parent="LearnButton" instance=ExtResource( 10 )]
position = Vector2( 1200, 0 )

[node name="AbstractButton" parent="LearnButton" instance=ExtResource( 11 )]

[node name="HugeWall3" parent="LearnButton/AbstractButton" instance=ExtResource( 7 )]
position = Vector2( 200, 0 )

[node name="Timer" type="Timer" parent="LearnButton/AbstractButton/HugeWall3"]
wait_time = 2.0
one_shot = true

[node name="AbstractButton2" parent="LearnButton" instance=ExtResource( 11 )]
position = Vector2( 1600, 0 )

[node name="HugeWall3" parent="LearnButton/AbstractButton2" instance=ExtResource( 7 )]
position = Vector2( 200, 0 )

[node name="Dummy2" parent="LearnButton" instance=ExtResource( 10 )]
position = Vector2( 4000, 0 )

[node name="Timer" type="Timer" parent="LearnButton/Dummy2"]
wait_time = 1.5
autostart = true

[node name="AbstractButton2" parent="." instance=ExtResource( 11 )]
position = Vector2( 16000, 0 )

[node name="SmallWall" parent="AbstractButton2" instance=ExtResource( 6 )]
position = Vector2( 700, 0 )

[node name="SmallWall15" parent="AbstractButton2" instance=ExtResource( 6 )]
position = Vector2( 540, 0 )

[node name="SmallWall8" parent="AbstractButton2" instance=ExtResource( 6 )]
position = Vector2( 620, 0 )

[node name="SmallWall16" parent="AbstractButton2" instance=ExtResource( 6 )]
position = Vector2( 520, 0 )

[node name="SmallWall2" parent="AbstractButton2" instance=ExtResource( 6 )]
position = Vector2( 680, 0 )

[node name="SmallWall12" parent="AbstractButton2" instance=ExtResource( 6 )]
position = Vector2( 500, 0 )

[node name="SmallWall6" parent="AbstractButton2" instance=ExtResource( 6 )]
position = Vector2( 600, 0 )

[node name="SmallWall10" parent="AbstractButton2" instance=ExtResource( 6 )]
position = Vector2( 480, 0 )

[node name="SmallWall3" parent="AbstractButton2" instance=ExtResource( 6 )]
position = Vector2( 660, 0 )

[node name="SmallWall9" parent="AbstractButton2" instance=ExtResource( 6 )]
position = Vector2( 460, 0 )

[node name="SmallWall5" parent="AbstractButton2" instance=ExtResource( 6 )]
position = Vector2( 580, 0 )

[node name="SmallWall14" parent="AbstractButton2" instance=ExtResource( 6 )]
position = Vector2( 440, 0 )

[node name="SmallWall4" parent="AbstractButton2" instance=ExtResource( 6 )]
position = Vector2( 640, 0 )

[node name="SmallWall13" parent="AbstractButton2" instance=ExtResource( 6 )]
position = Vector2( 420, 0 )

[node name="SmallWall7" parent="AbstractButton2" instance=ExtResource( 6 )]
position = Vector2( 560, 0 )

[node name="SmallWall11" parent="AbstractButton2" instance=ExtResource( 6 )]
position = Vector2( 400, 0 )

[node name="HugeWall" parent="AbstractButton2" instance=ExtResource( 7 )]
position = Vector2( 1000, 0 )

[node name="Polygon2D2" type="Polygon2D" parent="AbstractButton2"]
position = Vector2( 800, 0 )
color = Color( 1, 0.803922, 0.286275, 1 )
polygon = PoolVector2Array( 0, 0, 0, 500, 40, 500, 40, 0 )

[node name="Player" parent="." instance=ExtResource( 12 )]
position = Vector2( -210, 0 )

[node name="WaitingForThxTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
